examples/test/testpolicy13556.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy13556
  namespace: namespace207
spec:
  podSelector:
    matchLabels:
      key12: value2
      key24: value38
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key26: value32
      podSelector:
        matchLabels:
          key3: value40
          key14: value43
